bin_PROGRAMS = smebpu

smebpu_CXXFLAGS = $(SME_CFLAGS)
smebpu_LDADD = $(SME_LIBS)

#smebpu_HEADERS = alu.h
smebpu_SOURCES = main.cc alu.cc alu.h instruction_driver.cc instruction_driver.h memory.cc memory.h memory_reader.cc memory_reader.h execute_feeder.cc execute_feeder.h memory_writer.cc memory_writer.h memory_writer_feeder.cc memory_writer_feeder.h register_file.cc register_file.h constants.h
